--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
+    "expo-background-fetch": "^6.0.0",
     "expo-constants": "6.0.0",
     "expo-font": "~6.0.0",
+    "expo-location": "^6.0.0",
+    "expo-permissions": "^6.0.0",
+    "expo-task-manager": "^6.0.0",
     "expo-web-browser": "6.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0"
